# bitcoin-mining-simulator

./: Account.cpp  Account.h  Block.cpp  Block.h  Blockchain.cpp  Blockchain.h  CMakeLists.txt  Interface.cpp  Interface.h  Miner.h  README.md  SHA256.cpp  SHA256.h  Transaction.cpp  Transaction.h  main.cpp
tests/: test_addBlock.cpp  test_addTransaction.cpp  test_createAccount.cpp  test_dummy.cpp  test_getBalance.cpp
